--- a/content/c/01-introduction.mdx
+++ b/content/c/01-introduction.mdx
@@ -1,5 +1,5 @@
 ---
-title: Introduction
+title: Introduction to C Programming Language
 description: Learn the fundamentals of C programming, including its history, features, installation, and first program execution.
 author: CSExplore Team
 ---
