--- a/content/c/01-introduction.mdx
+++ b/content/c/01-introduction.mdx
@@ -5,7 +5,6 @@ author: CSExplore Team
 ---
 
 # Introduction to C Programming 🚀
-
 Have you ever wondered how your mobile phone works? How do communication networks function seamlessly? The answer lies in **programming** and the intricate logic behind it—all of which ultimately boils down to **zeros and ones**. Let's dive into **C programming**, the foundation of many modern technologies, to understand how these systems operate.
 
 ## What is C?
@@ -14,6 +13,15 @@ Have you ever wondered how your mobile phone works? How do communication network
 
 C is a **general-purpose, procedural programming language** developed by **Dennis Ritchie** in **1972** at Bell Labs. It remains one of the most influential programming languages, known for its efficiency, portability, and direct access to system hardware. C is widely used for **system programming, operating systems, embedded systems, and high-performance applications**.
 
+- hello
+- hello 
+- hello 
+- hello 
+1. hello
+1. hello 
+1. hello 
+
+> _Prince Kumar Prasad_
 ## Why Learn C? 🧐
 
 C is the foundation of many popular programming languages like **C++, Java, Python, and Go**. It's **fast and efficient**, making it perfect for systems where speed matters, such as **operating systems, databases, and embedded systems**.
@@ -30,7 +38,7 @@ To start writing programs in C, you'll need a **compiler** and a **code editor**
 
 Let's write a simple **Hello, World!** program in C.
 
-```c
+```c showLineNumbers{number}
 #include <stdio.h>
 
 int main() {
@@ -52,7 +60,7 @@ Hello, World!
 3. `printf()` – Prints output to the console.
 4. `return 0;` – Indicates successful execution.
 
-## **Compiling & Running the Program For Windows:**
+## Compiling & Running the Program For Windows:
 
 ```bash
 gcc hello.c -o hello.exe
